Increase PermGen size for the test executors