@@ -102,6 +102,7 @@ subprojects {
   // allow to run tests in parallel
   tasks.withType(Test).all {
       maxParallelForks = 4
+      jvmArgs '-XX:MaxPermSize=1024m'
   }
 
   // allow to
